# CUDA-FastNormalizedCrossCorrelation

./: .gitignore  EXAMPLE.md  GRADIENTS.md  Makefile  NORMALIZATION.md  README.MD  pyproject.toml  pytest.ini  reproduce_crash.py  setup.py
benchmarks/: cc_benchs.ipynb
cuda_kernels/torch_bidimcc/include/: fft_cc.h  local_std.h
cuda_kernels/torch_bidimcc/src/cpu/: fft_cc_cpu.cpp  local_std_cpu.cpp
cuda_kernels/torch_bidimcc/src/cuda/: fft_cc_cuda.cu  local_std_cuda.cu
cuda_kernels/torch_cireg/: binding.cpp  fft_cc.cu  fft_cc.h  fft_cc_cpu.cpp  fft_cc_cuda.cu  fft_zncc.h  fft_zncc_cpu.cpp  fft_zncc_cuda.cu
tests/: test_cc.py  test_cc_zncc.py  test_cc_zncc_cpu.py  test_cc_zncc_cuda.py  test_local_std.py  test_stability.py  test_zncc.py  utils.py
